force-app/main/default/objects/Custom_Activity__c/fields/Activity_Stage__c.field-meta.xml
<CustomField>
    <fullName>Activity_Stage__c</fullName>
    <label>Activity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Buyer</fullName>
            </value>
            <value>
                <fullName>StubHub</fullName>
            </value>
            <value>
                <fullName>Seller</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>