force-app/main/default/objects/Custom_Activity__c/fields/days_ago__c.field-meta.xml
<CustomField>
    <fullName>days_ago__c</fullName>
    <label>days ago</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>