force-app/main/default/objects/Custom_Activity__c/fields/time__c.field-meta.xml
<CustomField>
    <fullName>time__c</fullName>
    <label>time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>